# rdk-alexa_skill_mapper

./: AlexaCurl.json  AlexaRdkServiceSkillMap.json  CMakeLists.txt  CONTRIBUTING.md  NOTICE  PrepareInstallTarget.cmake  README.md  SmartScreenControl.json  VSKConfig.json  credentials
include/VoiceToApps/: FileAudioWrapper.h  VideoSkillInterface.h  VideoSkillJsonUtils.h  VoiceToApps.h
src/: CMakeLists.txt  FileAudioWrapper.cpp  VideoSkillConnector.cpp  VideoSkillInterface.cpp  VideoSkillJsonUtils.cpp  VoiceToApps.cpp
